# addimport

./: .flake8  README.rst  addimport.kak  addimports.kak  pyproject.toml
addimport/: adder.py  c.py  c_source.py  cli.py  go.py  javascript.py  python.py  python_source.py  source.py
addimports/: __init__.py  adder.py  c_source.py  cli.py  source.py
tests/: test_adder.py  test_c.py  test_c_source.py  test_go.py  test_python.py
