[tool.poetry]
name = "addimport"
version = "0.1.0"
description = "Like addinclude, but in Python, for more languages, and with Kakoune integration"
authors = ["Dimitri Merejkowsky <d.merej@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
pytest = "^5.3.5"

[tool.poetry.scripts]
addimport = "addimport.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
